# Account/app/Models/UploadFile.php
@@ -4,7 +4,15 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
-
+/**
+ * @OA\Schema(
+ *     title="UploaFile",
+ *     description="Upload File",
+ *     @OA\Xml(
+ *         name="UploadFile"
+ *     )
+ * )
+ */
 class UploadFile extends Model
 {
     use HasFactory;
